# aco-vrp-scalability

./: .gitignore  LICENSE  README.md  pyproject.toml
data/solomon/: rc101.txt
docs/: MANUSCRIPT.md  METHODOLOGY.md  ROADMAP.md  laporan.typ  refs.bib
results/: raw_runs.csv  statistical_report.txt  trial_baseline.csv  trial_runs.csv
results/data/: raw_runs.csv
results/report/: statistical_report.txt
scripts/: download_solomon.py  generate_outputs.py  run_experiments.py
src/aco_vrp/: __init__.py  analysis.py  core.py  experiment.py  heuristics.py  problem.py  visualization.py
tests/: __init__.py  conftest.py  test_analysis.py  test_core.py  test_heuristics.py  test_problem.py
