[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aco-vrp-scalability"
version = "0.1.0"
description = "Scalability analysis of Ant Colony Optimization for the Capacitated Vehicle Routing Problem using Solomon benchmark instances"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Aldi Pramudya" },
    { name = "Raihan Putra Kirana" },
    { name = "Aghnat Hasya Sayyidina" },
    { name = "Walid Nadirul Ahnaf" },
    { name = "Muhammad Fauzan Zubaedi" },
]
keywords = [
    "ant-colony-optimization",
    "vehicle-routing-problem",
    "swarm-intelligence",
    "scalability-analysis",
    "computational-intelligence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "plotly>=5.18.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aco_vrp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["aco_vrp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["aco_vrp"]
